tests/pass/mytest27.rx
/*
Test: Unit Test 27 - Type inference
*/
fn main() {
    let a: i32 = 5;
    exit(a);
}
